# analytics2

./: 05transformers.html  16fastai.html  18pydantic.html  30chatgpt.html  31pytorch.html  32torchrl.html  README.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
_proc/: 05transformers.ipynb  11networkx.ipynb  18pydantic.ipynb  30chatgpt.ipynb  index.ipynb  nbdev.yml  sidebar.yml  temp-plot.html
_proc/_docs/: 05transformers.html  06neuralprophet.html  10forecast.html  11networkx.html  16fastai.html  17neuralprophet.html  18pydantic.html  30chatgpt.html  core.html  index.html  search.json  sitemap.xml
_proc/lightning_logs/version_0/: events.out.tfevents.1691551460.mikionoMacBook-Air.local.58045.0  events.out.tfevents.1691551475.mikionoMacBook-Air.local.58045.1  events.out.tfevents.1691551519.mikionoMacBook-Air.local.58045.2
_proc/lightning_logs/version_1/: events.out.tfevents.1691620482.mikionoMacBook-Air.local.58045.3  events.out.tfevents.1691620508.mikionoMacBook-Air.local.58045.4
_proc/lightning_logs/version_10/: events.out.tfevents.1691624828.mikionoMacBook-Air.local.58045.18  events.out.tfevents.1691624834.mikionoMacBook-Air.local.58045.19
_proc/lightning_logs/version_12/: events.out.tfevents.1691625049.mikionoMacBook-Air.local.58045.22
analytics2/: _modidx.py  fastai.py  networkx.py  neuralprophetf.py
nbs/: 05transformers.ipynb  11networkx.ipynb  18pydantic.ipynb  30chatgpt.ipynb  31pytorch.ipynb  32torchrl.ipynb  index.ipynb  sidebar.yml  temp-plot.html
nbs/lightning_logs/version_59/: hparams.yaml  metrics.csv
(+105 files in other folders)
