[tool.poetry]
name = "analytics2"
version = "0.1.0"
description = ""
authors = ["mikio kubo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.2"
nbdev = "^2.3.12"
jupyterlab-quarto = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
