[tool.poetry]
name = "analytics2"
version = "0.1.0"
description = ""
authors = ["mikio kubo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jupyterlab = "^4.0.2"
nbdev = "^2.3.12"
scipy = "^1.11.1"
pandas = "^1.3.5"
networkx = "^3.1"
fastai = "^2.7.12"
fastapi = "^0.100.0"
pydantic = "^2.0.2"
matplotlib = "^3.7.2"
plotly = "^5.15.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
datasets = "^2.13.1"
evaluate = "^0.4.0"
torch = "^1.13.1"
neuralprophet = "^0.6.2"
vega-datasets = "^0.9.0"
timm = "^0.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
